# data_drift_module

./: .env  .gitignore  .gitognore  CLAUDE.md  README.md  pyproject.toml
data/: production_data_no_drift.csv  production_data_with_drift.csv  training_data.csv
data_drift_module/: __init__.py  config.py  detector.py  visualizer.py
dependencies/: __init__.py  data_drift_detector.py  drift_visualizer.py
examples/: quick_start.py
examples/notebooks/: quick_start_drift.ipynb  quick_start_nondrift.ipynb
files/: improved_data_drift_detector.py  improved_drift_visualizer.py  quick_start_improved.py  quick_start_simple.py
output/: my_drift_report.md  my_drift_report.txt
script/: quick_start.py  quick_start_drift.ipynb  quick_start_nonfrift.ipynb
